<resources>
    <string name="app_name">Hypechat</string>
    <string name="navigation_drawer_open">Abrir panel de navegación</string>
    <string name="navigation_drawer_close">Cerrar panel de navegación</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Panel de navegación</string>
    <string name="action_settings">Ajustes</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_email">Esta dirección de correo electrónico no es válida</string>
    <string name="error_invalid_password">Esta contraseña es demasiado corta</string>
    <string name="error_incorrect_password">Esta contraseña es incorrecta</string>
    <string name="error_field_required">Se requiere este campo</string>
    <string name="o">ó</string>

    <!-- String related to register -->
    <string name="title_activity_register">Registro</string>
    <string name="action_register">Registrarse</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_pw_confirm">Confirmar password</string>


    <string name="title_activity_channel">ChannelActivity</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
